SCSL/build/lib/SCSL/Specifications/scslParser.py
# Generated from scsl.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class scslParser ( Parser ):

    grammarFileName = "scsl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<'", "'>'", "'='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\n'", "<INVALID>", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "','", "'+'", "'-'", "'for every'", 
                     "'there is a'", "'satisfying'", "'before'", "'after'", 
                     "'next after'", "'value variable'", "'value signal'", 
                     "'duration'", "'timestamp'", "'time to'", "'or'", "'and'", 
                     "'not'", "'true'", "'false'", "'at time'", "'in'", 
                     "'.during'", "'from'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STR", "REAL", "INT", "NEWLINE", "WS", "LB", "RB", 
                      "LP", "RP", "LSB", "RSB", "COMMA", "PLUS", "MINUS", 
                      "FORALL", "EXISTS", "SATISFYING", "BEFORE", "AFTER", 
                      "NEXTOPKWS", "VALUEKWS", "SIGNALVALUEKWS", "DURATION", 
                      "TIME", "TIMEBETWEEN", "OR", "AND", "NOT", "TRUE", 
                      "FALSE", "ATTIME", "IN", "DURING", "FROM", "ID" ]

    RULE_real_number = 0
    RULE_quant = 1
    RULE_disjunction = 2
    RULE_conjunction = 3
    RULE_negation = 4
    RULE_value = 5
    RULE_variable = 6
    RULE_string = 7
    RULE_signal_variable = 8
    RULE_predicate_name = 9
    RULE_beforeTr = 10
    RULE_afterTr = 11
    RULE_spec = 12
    RULE_quantifier_block = 13
    RULE_quant_section = 14
    RULE_inner = 15
    RULE_predicate = 16
    RULE_source_code_predicate = 17
    RULE_dsl_predicate = 18
    RULE_predicate_args = 19
    RULE_procedure_qualifier = 20
    RULE_after_qualifier = 21
    RULE_timestamp_predicate = 22
    RULE_expr = 23
    RULE_ts = 24
    RULE_tr = 25
    RULE_c = 26
    RULE_nextOp = 27
    RULE_cmp = 28
    RULE_arithmetic = 29
    RULE_phi_single = 30
    RULE_phi_ts = 31
    RULE_phi_tr = 32
    RULE_phi_c = 33
    RULE_phi_multiple = 34
    RULE_timeBetween = 35
    RULE_v_ts = 36
    RULE_v_tr = 37
    RULE_v_c = 38

    ruleNames =  [ "real_number", "quant", "disjunction", "conjunction", 
                   "negation", "value", "variable", "string", "signal_variable", 
                   "predicate_name", "beforeTr", "afterTr", "spec", "quantifier_block", 
                   "quant_section", "inner", "predicate", "source_code_predicate", 
                   "dsl_predicate", "predicate_args", "procedure_qualifier", 
                   "after_qualifier", "timestamp_predicate", "expr", "ts", 
                   "tr", "c", "nextOp", "cmp", "arithmetic", "phi_single", 
                   "phi_ts", "phi_tr", "phi_c", "phi_multiple", "timeBetween", 
                   "v_ts", "v_tr", "v_c" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    STR=4
    REAL=5
    INT=6
    NEWLINE=7
    WS=8
    LB=9
    RB=10
    LP=11
    RP=12
    LSB=13
    RSB=14
    COMMA=15
    PLUS=16
    MINUS=17
    FORALL=18
    EXISTS=19
    SATISFYING=20
    BEFORE=21
    AFTER=22
    NEXTOPKWS=23
    VALUEKWS=24
    SIGNALVALUEKWS=25
    DURATION=26
    TIME=27
    TIMEBETWEEN=28
    OR=29
    AND=30
    NOT=31
    TRUE=32
    FALSE=33
    ATTIME=34
    IN=35
    DURING=36
    FROM=37
    ID=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Real_numberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REAL(self):
            return self.getToken(scslParser.REAL, 0)

        def getRuleIndex(self):
            return scslParser.RULE_real_number

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReal_number" ):
                return visitor.visitReal_number(self)
            else:
                return visitor.visitChildren(self)




    def real_number(self):

        localctx = scslParser.Real_numberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_real_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(scslParser.REAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FORALL(self):
            return self.getToken(scslParser.FORALL, 0)

        def EXISTS(self):
            return self.getToken(scslParser.EXISTS, 0)

        def getRuleIndex(self):
            return scslParser.RULE_quant

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuant" ):
                return visitor.visitQuant(self)
            else:
                return visitor.visitChildren(self)




    def quant(self):

        localctx = scslParser.QuantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_quant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not(_la==18 or _la==19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisjunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OR(self):
            return self.getToken(scslParser.OR, 0)

        def getRuleIndex(self):
            return scslParser.RULE_disjunction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisjunction" ):
                return visitor.visitDisjunction(self)
            else:
                return visitor.visitChildren(self)




    def disjunction(self):

        localctx = scslParser.DisjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_disjunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(scslParser.OR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConjunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(scslParser.AND, 0)

        def getRuleIndex(self):
            return scslParser.RULE_conjunction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConjunction" ):
                return visitor.visitConjunction(self)
            else:
                return visitor.visitChildren(self)




    def conjunction(self):

        localctx = scslParser.ConjunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_conjunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(scslParser.AND)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NegationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(scslParser.NOT, 0)

        def getRuleIndex(self):
            return scslParser.RULE_negation

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegation" ):
                return visitor.visitNegation(self)
            else:
                return visitor.visitChildren(self)




    def negation(self):

        localctx = scslParser.NegationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_negation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(scslParser.NOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def real_number(self):
            return self.getTypedRuleContext(scslParser.Real_numberContext,0)


        def string(self):
            return self.getTypedRuleContext(scslParser.StringContext,0)


        def ID(self):
            return self.getToken(scslParser.ID, 0)

        def getRuleIndex(self):
            return scslParser.RULE_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = scslParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_value)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.real_number()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.string()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.match(scslParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(scslParser.ID, 0)

        def getRuleIndex(self):
            return scslParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = scslParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(scslParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self):
            return self.getToken(scslParser.STR, 0)

        def getRuleIndex(self):
            return scslParser.RULE_string

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = scslParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(scslParser.STR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Signal_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(scslParser.ID, 0)

        def getRuleIndex(self):
            return scslParser.RULE_signal_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignal_variable" ):
                return visitor.visitSignal_variable(self)
            else:
                return visitor.visitChildren(self)




    def signal_variable(self):

        localctx = scslParser.Signal_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_signal_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(scslParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predicate_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(scslParser.ID, 0)

        def getRuleIndex(self):
            return scslParser.RULE_predicate_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate_name" ):
                return visitor.visitPredicate_name(self)
            else:
                return visitor.visitChildren(self)




    def predicate_name(self):

        localctx = scslParser.Predicate_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_predicate_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(scslParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeforeTrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEFORE(self):
            return self.getToken(scslParser.BEFORE, 0)

        def getRuleIndex(self):
            return scslParser.RULE_beforeTr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBeforeTr" ):
                return visitor.visitBeforeTr(self)
            else:
                return visitor.visitChildren(self)




    def beforeTr(self):

        localctx = scslParser.BeforeTrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_beforeTr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(scslParser.BEFORE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AfterTrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AFTER(self):
            return self.getToken(scslParser.AFTER, 0)

        def getRuleIndex(self):
            return scslParser.RULE_afterTr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAfterTr" ):
                return visitor.visitAfterTr(self)
            else:
                return visitor.visitChildren(self)




    def afterTr(self):

        localctx = scslParser.AfterTrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_afterTr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(scslParser.AFTER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quantifier_block(self):
            return self.getTypedRuleContext(scslParser.Quantifier_blockContext,0)


        def getRuleIndex(self):
            return scslParser.RULE_spec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = scslParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.quantifier_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Quantifier_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quant_section(self):
            return self.getTypedRuleContext(scslParser.Quant_sectionContext,0)


        def LP(self):
            return self.getToken(scslParser.LP, 0)

        def inner(self):
            return self.getTypedRuleContext(scslParser.InnerContext,0)


        def RP(self):
            return self.getToken(scslParser.RP, 0)

        def getRuleIndex(self):
            return scslParser.RULE_quantifier_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuantifier_block" ):
                return visitor.visitQuantifier_block(self)
            else:
                return visitor.visitChildren(self)




    def quantifier_block(self):

        localctx = scslParser.Quantifier_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_quantifier_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.quant_section()
            self.state = 108
            self.match(scslParser.LP)
            self.state = 109
            self.inner(0)
            self.state = 110
            self.match(scslParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Quant_sectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quant(self):
            return self.getTypedRuleContext(scslParser.QuantContext,0)


        def variable(self):
            return self.getTypedRuleContext(scslParser.VariableContext,0)


        def SATISFYING(self):
            return self.getToken(scslParser.SATISFYING, 0)

        def predicate(self):
            return self.getTypedRuleContext(scslParser.PredicateContext,0)


        def getRuleIndex(self):
            return scslParser.RULE_quant_section

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuant_section" ):
                return visitor.visitQuant_section(self)
            else:
                return visitor.visitChildren(self)




    def quant_section(self):

        localctx = scslParser.Quant_sectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_quant_section)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.quant()
            self.state = 113
            self.variable()
            self.state = 114
            self.match(scslParser.SATISFYING)
            self.state = 115
            self.predicate()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InnerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quantifier_block(self):
            return self.getTypedRuleContext(scslParser.Quantifier_blockContext,0)


        def negation(self):
            return self.getTypedRuleContext(scslParser.NegationContext,0)


        def LB(self):
            return self.getToken(scslParser.LB, 0)

        def inner(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scslParser.InnerContext)
            else:
                return self.getTypedRuleContext(scslParser.InnerContext,i)


        def RB(self):
            return self.getToken(scslParser.RB, 0)

        def TRUE(self):
            return self.getToken(scslParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(scslParser.FALSE, 0)

        def phi_single(self):
            return self.getTypedRuleContext(scslParser.Phi_singleContext,0)


        def phi_multiple(self):
            return self.getTypedRuleContext(scslParser.Phi_multipleContext,0)


        def disjunction(self):
            return self.getTypedRuleContext(scslParser.DisjunctionContext,0)


        def conjunction(self):
            return self.getTypedRuleContext(scslParser.ConjunctionContext,0)


        def getRuleIndex(self):
            return scslParser.RULE_inner

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInner" ):
                return visitor.visitInner(self)
            else:
                return visitor.visitChildren(self)



    def inner(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = scslParser.InnerContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 30
        self.enterRecursionRule(localctx, 30, self.RULE_inner, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 118
                self.quantifier_block()
                pass

            elif la_ == 2:
                self.state = 119
                self.negation()
                self.state = 120
                self.match(scslParser.LB)
                self.state = 121
                self.inner(0)
                self.state = 122
                self.match(scslParser.RB)
                pass

            elif la_ == 3:
                self.state = 124
                self.match(scslParser.TRUE)
                pass

            elif la_ == 4:
                self.state = 125
                self.match(scslParser.FALSE)
                pass

            elif la_ == 5:
                self.state = 126
                self.phi_single()
                pass

            elif la_ == 6:
                self.state = 127
                self.phi_multiple()
                pass

            elif la_ == 7:
                self.state = 128
                self.match(scslParser.LB)
                self.state = 129
                self.inner(0)
                self.state = 130
                self.match(scslParser.RB)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 144
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 142
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = scslParser.InnerContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_inner)
                        self.state = 134
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 135
                        self.disjunction()
                        self.state = 136
                        self.inner(9)
                        pass

                    elif la_ == 2:
                        localctx = scslParser.InnerContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_inner)
                        self.state = 138
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 139
                        self.conjunction()
                        self.state = 140
                        self.inner(8)
                        pass

             
                self.state = 146
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PredicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def source_code_predicate(self):
            return self.getTypedRuleContext(scslParser.Source_code_predicateContext,0)


        def timestamp_predicate(self):
            return self.getTypedRuleContext(scslParser.Timestamp_predicateContext,0)


        def getRuleIndex(self):
            return scslParser.RULE_predicate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)




    def predicate(self):

        localctx = scslParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_predicate)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.source_code_predicate()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.timestamp_predicate()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Source_code_predicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dsl_predicate(self):
            return self.getTypedRuleContext(scslParser.Dsl_predicateContext,0)


        def procedure_qualifier(self):
            return self.getTypedRuleContext(scslParser.Procedure_qualifierContext,0)


        def after_qualifier(self):
            return self.getTypedRuleContext(scslParser.After_qualifierContext,0)


        def getRuleIndex(self):
            return scslParser.RULE_source_code_predicate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource_code_predicate" ):
                return visitor.visitSource_code_predicate(self)
            else:
                return visitor.visitChildren(self)




    def source_code_predicate(self):

        localctx = scslParser.Source_code_predicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_source_code_predicate)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.dsl_predicate()
                self.state = 152
                self.procedure_qualifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.dsl_predicate()
                self.state = 155
                self.procedure_qualifier()
                self.state = 156
                self.after_qualifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dsl_predicateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate_name(self):
            return self.getTypedRuleContext(scslParser.Predicate_nameContext,0)


        def LB(self):
            return self.getToken(scslParser.LB, 0)

        def predicate_args(self):
            return self.getTypedRuleContext(scslParser.Predicate_argsContext,0)


        def RB(self):
            return self.getToken(scslParser.RB, 0)

        def getRuleIndex(self):
            return scslParser.RULE_dsl_predicate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDsl_predicate" ):
                return visitor.visitDsl_predicate(self)
            else:
                return visitor.visitChildren(self)




    def dsl_predicate(self):

        localctx = scslParser.Dsl_predicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_dsl_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.predicate_name()
            self.state = 161
            self.match(scslParser.LB)
            self.state = 162
            self.predicate_args()
            self.state = 163
            self.match(scslParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Predicate_argsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(scslParser.StringContext,0)


        def COMMA(self):
            return self.getToken(scslParser.COMMA, 0)

        def predicate_args(self):
            return self.getTypedRuleContext(scslParser.Predicate_argsContext,0)


        def getRuleIndex(self):
            return scslParser.RULE_predicate_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate_args" ):
                return visitor.visitPredicate_args(self)
            else:
                return visitor.visitChildren(self)




    def predicate_args(self):

        localctx = scslParser.Predicate_argsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_predicate_args)
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.string()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(scslParser.COMMA)
                self.state = 167
                self.string()
                pass
